
  If your code has conditional logic based on the message content in raised
  `ParseExceptions`, this bugfix may break your code.

- Fixed (or at least reduced) elusive bug when generating railroad diagrams,
  where some diagram elements were just empty blocks. Fix submitted by RoDuth,
  thanks a ton!

- Added `lox_parser.py` example, a parser for the Lox language used as a tutorial in
  Robert Nystrom's "Crafting Interpreters" (http://craftinginterpreters.com/)

- Added `complex_chemical_formulas.py` example, to add parsing capability for
  formulas such as "3(C₆H₅OH)₂".

- Added query syntax to `mongodb_query_expression.py` with better support for
  array fields ("contains", "contains all", "contains any", and "contains none");
  and "like" and "not like" operators to support SQL "%" wildcard matching and "=~"
  operator to support regex matching. Also added support for dates and datetimes
  as query values.

- Added `indent` and `base_1` arguments to `pyparsing.testing.with_line_numbers`. When
  using `with_line_numbers` inside a parse action, set `base_1`=False, since the
  reported `loc` value is 0-based. `indent` can be a leading string (typically of
  spaces or tabs) to indent the numbered string passed to `with_line_numbers`.
  Added while working on #557, reported by Bernd Wechner.


Version 3.1.4 - August, 2024
----------------------------
- Fixed a regression introduced in pyparsing 3.1.3, addition of a type annotation that
  referenced `re.Pattern`. Since this type was introduced in Python 3.7, using this type
  definition broke Python 3.6 installs of pyparsing 3.1.3. PR submitted by Felix Fontein,
  nice work!


Version 3.1.3 - August, 2024
----------------------------
- Added new `Tag` ParserElement, for inserting metadata into the parsed results.
  This allows a parser to add metadata or annotations to the parsed tokens.
  The `Tag` element also accepts an optional `value` parameter, defaulting to `True`.